# how_to_quantize_model

./: model.py  pyproject.toml  train.py
QCNN/: model.py  quantization.ipynb  train.py
