[project]
name = "quantization"
version = "0.1.0"
description = ""
authors = [
    {name = "MrQwest",email = "128bit@128bit.xyz"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
